# FeatureExtraction

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/featureDetection/: feature_extraction.cpp  feature_extraction.h  img_processing.cpp  img_processing.h
